# libghostty-rs

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml
crates/ghostty-sys/: build.rs
crates/ghostty-sys/src/: lib.rs
crates/ghostty/src/: alloc.rs  build_info.rs  error.rs  key.rs  lib.rs  mouse.rs  osc.rs  paste.rs  render.rs  sgr.rs  style.rs  terminal.rs
crates/libghostty-vt/: Cargo.toml
crates/libghostty-vt-sys/: Cargo.toml  README.md  build.rs
crates/libghostty-vt-sys/src/: bindings.rs  lib.rs  type_layout.json
crates/libghostty-vt-sys/tools/: gen_bindings.rs
crates/libghostty-vt/src/: alloc.rs  build_info.rs  error.rs  fmt.rs  focus.rs  key.rs  lib.rs  log.rs  mouse.rs  osc.rs  paste.rs  render.rs  screen.rs  sgr.rs  style.rs  sys.rs  terminal.rs
crates/libghostty-vt/src/kitty/: graphics.rs
example/ghostling_rs/src/: main.rs
