[package]
name = "libghostty-vt-sys"
description = "Raw FFI bindings for libghostty-vt, the Ghostty terminal emulation library"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
links = "ghostty-vt"
build = "build.rs"

[features]
default = ["vendored"]
vendored = []
bindgen-tool = ["dep:bindgen", "dep:libc"]

[dependencies]
bindgen = {version = "0.72.1", optional = true}
libc = {version = "0.2", optional = true}

[build-dependencies]

[[bin]]
name = "gen-bindings"
path = "tools/gen_bindings.rs"
required-features = ["bindgen-tool"]
