[package]
name = "libghostty-vt-sys"
description = "Raw FFI bindings for libghostty-vt, the Ghostty terminal emulation library"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
links = "ghostty-vt"
build = "build.rs"

[lib]
doctest = false

[features]
default = ["vendored"]
vendored = []
pkg-config = ["dep:pkg-config"]
bindgen-tool = ["dep:bindgen", "dep:libc", "dep:heck"]
kitty-graphics = []

[dependencies]
bindgen = {version = "0.72.1", optional = true}
libc = {version = "0.2", optional = true}
heck = {version = "0.5", optional = true}

[build-dependencies]
pkg-config = { version = "0.3", optional = true }

[[bin]]
name = "gen-bindings"
path = "tools/gen_bindings.rs"
required-features = ["bindgen-tool"]
