[package]
name = "libghostty-vt"
description = "Safe Rust API for libghostty-vt, the Ghostty terminal emulation library"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["kitty-images"]
allocator_api = ["dep:allocator-api2"]
kitty-images = ["libghostty-vt-sys/kitty-images"]
png = ["dep:png"]

[dependencies]
allocator-api2 = { version = "0.4.0", optional = true }
bitflags = "2.11.0"
libghostty-vt-sys.workspace = true
int-enum = "1.2.0"
png = { version = "0.18.1", optional = true }

[dev-dependencies]
libghostty-vt-sys.workspace = true

[package.metadata.docs.rs]
all-features = true
